unify test jvmArgs settings, remove from sub-builds