@@ -52,18 +52,8 @@ test {
         exceptionFormat ='full'
     }
     forkEvery = 30
-    maxParallelForks = 4
-    jvmArgs '-server','-Xmx1024M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m','-XX:+CMSClassUnloadingEnabled','-XX:+HeapDumpOnOutOfMemoryError'
 }
 
 compileTestGroovy {
     groovyOptions.fork(memoryMaximumSize: '1024m')
 }
-/*
-test {
-	jvmArgs '-Xmx1024m', '-Xdebug', '-Xnoagent', '-Dgrails.full.stacktrace=true', '-Djava.compiler=NONE',
-	        '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
-}
-*/
-
-
